src/objects/User_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Group_Team__c</fullName>
        <label>Group^Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Group_Buckets__c</fullName>
        <formula>LEFT(Group_Team__c, FIND( &quot;^&quot;,Group_Team__c )-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team (Group Buckets)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>Right(Group_Team__c, LEN(Group_Team__c)- FIND( &quot;^&quot;,Group_Team__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenure_Company__c</fullName>
        <label>Tenure at Company (Days)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tenure_Role__c</fullName>
        <label>Tenure in Role (Days)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>User Snapshot</label>
    <nameField>
        <label>User Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>